# plainTorch

./: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  CMakeProject.vcxproj  CMakeProject.vcxproj.filters  Project.sln  README.md  Source.cpp  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  plainTorch.sln  plainTorch.vcxproj
CMakeProject.dir/Debug/CMakeProject.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CMakeProject.write.1u.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Debug/: CMakeProject.exp  CMakeProject.ilk  CMakeProject.lib
x64/Debug/: vc142.idb
x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: ZERO_CHECK.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
x64/Debug/plainTorch.tlog/: plainTorch.lastbuildstate
